<resources>
    <string name="app_name">MoodTracker</string>
    <string name="StringForAddCommentButton">This buttton is used to allow users to add comments about the mood of current day</string>
    <string name="StringForMoodHistory">This button is used to allow the users to check the history mood of the lasts 7 days</string>
    <string name="StringSuperHappy">Button about supper happy mood</string>
    <string name="StringHappy">Button about happy mood</string>
    <string name="StringNormal">This button is about normal mood</string>
    <string name="StringDisappointed">This button is about Disappointed mood</string>
    <string name="StringSad">This button is about sad mood</string>
    <string name="StringExplainMoodReasonDialog">Expliquez la raison de votre humeur</string>
    <string name="StringValider">VALIDER</string>
    <string name="StringAnnuler">ANNULER</string>
    <string name="mood_view">1</string>
    <string name="moodview2">2</string>
    <string name="moodview3">3</string>
    <string name="moodview4">4</string>
    <string name="textview5">5</string>
    <string name="moodview6">6</string>
    <string name="moodview7">7</string>
    <string name="Sharebutton">About share the mood with friends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
